k8s/k3s_prod/vault/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  labels:
    app: vault
  namespace: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:2.1.1
          args:
            - vault
            - server
            - -config=/vault/config/vault.hcl
          ports:
            - containerPort: 8400
              name: app-port
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          volumeMounts:
            - name: config-volume
              mountPath: /vault/config/vault.hcl
              subPath: vault.hcl
      volumes:
        - name: config-volume
          configMap:
            name: vault-config
