k8s/k3s_prod/vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: vault
  name: vault
  labels:
    app: vault
spec:
  type: ClusterIP
  ports:
    - name: service-port
      port: 80
      targetPort: app-port
      protocol: TCP
  selector:
    app: vault
