k8s/k3s_prod/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    kubernetes.io/ingress.ingressClassName: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web-private
spec:
  rules:
    - host: vault.twop.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  name: service-port
